welcome.lessons.welcome.array.occurenceofvalue.OccurrenceOfValue.scala.error
occurrences:6: error: not found: value value
	if (nums(k) == value ) c=c+1
                       ^